--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,18 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
-description: ''
-keywords:
-author: John Doe
-language: en
+title: 离患小站
+subtitle: '明天会更好吗'
+description: '个人博客'
+keywords: 
+author: dsk
+language: zh-CN
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://XD06.github.io
-permalink: :title.html
+permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -100,24 +100,40 @@ theme: butterfly
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
-deploy:
-  type: ''
+deploy: 
+- type: netlify
+  token: nfp_MZzZs3CshVVxDheeQBdYE7LGUmovQRDTc34c
+  site_id: c42a1b21-9378-4f7b-97d2-9c109f86c65c
+- type: git
+  repo: https://github.com/XD06/XD06.github.io
+  branch: gh-pages
 
-#解决浏览器缓存问题
-hash:
-  enable: true
-cache_hash:
-  enable: true
-  prepend: /
-  manifest: 'asset-hash.json'
-  exts: '.js,.css'
-cache_control:
-  html: 'no-cache, no-store,max-age=0'
-  assets: 'public,max-age=31536000'
-filter_assets: 
-  css: sha256
-  js: sha256
 
+search:
+  path: search.xml
+  field: post
+  content: true
+  template: 
+aplayer:
+  meting: true
+  asset_inject: false
+  # Artitalk
+  # see https://artitalk.js.org/
+artitalk: #lencloud说说
+    enable: false
+    appId:
+    appKey:
+    path:
+    js:
+    option:
+    front_matter:
+# offline config passed to sw-precache.
+service_worker:
+  maximumFileSizeToCacheInBytes: 5242880
+  staticFileGlobs:
+  - public/**/*.{js,html,css,png,jpg,gif,svg,eot,ttf,woff,woff2}
+  stripPrefix: public
+  verbose: true
 # Security
 encrypt: # hexo-blog-encrypt
   abstract: 有东西被加密了, 请输入密码查看.
@@ -128,11 +144,9 @@ encrypt: # hexo-blog-encrypt
   theme: xray
   wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
   wrong_hash_message: 抱歉, 这个文章不能被校验, 不过您还是能看看解密后的内容.
-exclude:
-  -.nojekyll
 hexo-daily-news:
   enable: true
   apiUrl: 'https://v2.alapi.cn/api/zaobao'
-  token: 'your-api-token'
+  token: 'a3dksvxt73gyhpp3gjymbxxcsoqjq9'
 version: '1.0.0'
 timestamp: <%= new Date().getTime() %>
