--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "hexo generate",
+    "build:hash": "hexo generate ",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server"
@@ -12,23 +13,30 @@
     "version": "7.3.0"
   },
   "dependencies": {
-    "cache-hash": "^1.0.0-beta.11",
     "hexo": "^7.3.0",
     "hexo-blog-encrypt": "^3.1.9",
+    "hexo-butterfly-artitalk": "^1.0.5",
     "hexo-butterfly-charts": "^1.1.6",
+    "hexo-butterfly-extjs": "^1.4.17",
     "hexo-daily-news": "^1.0.1",
+    "hexo-deployer-netlify": "^0.0.7",
+    "hexo-douban": "^2.3.6",
+    "hexo-filter-optimize": "^0.3.1",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^4.0.0",
     "hexo-generator-search": "^2.4.3",
     "hexo-generator-tag": "^2.0.0",
-    "hexo-hash": "^1.0.4",
+    "hexo-hide-posts": "^0.4.3",
+    "hexo-offline": "^3.0.0",
+    "hexo-offline-popup": "^1.0.3",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^7.0.0",
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-server": "^3.0.0",
     "hexo-tag-img": "^1.0.2",
-    "hexo-theme-landscape": "^1.0.0"
+    "hexo-theme-landscape": "^1.0.0",
+    "hexo-wordcount": "^6.0.1"
   }
 }
