--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "hexo-server": "^3.0.0",
     "hexo-tag-img": "^1.0.2",
     "hexo-theme-landscape": "^1.0.0",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-wordcount": "^6.0.1",
+    "typed.js": "^2.1.0"
   }
 }
