--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -57,7 +57,7 @@ social:
 # Image Settings
 # --------------------------------------
 
-favicon: /img/author.png
+favicon: 
 
 avatar:
   img: /img/author.png
@@ -92,11 +92,11 @@ category_img: https://i.111666.best/image/ahltblVZOWc1SBbBgxJYiP.png
 category_per_img: https://i.111666.best/image/ahltblVZOWc1SBbBgxJYiP.png
 
 # The background image of footer
-footer_img: transparent
+footer_img: "transparent"
 
 # Website Background
 # Can set it to color or image url
-background: transparent
+background: "transparent"
 
 cover:
   # Disable the cover or not
@@ -105,10 +105,16 @@ cover:
   archives_enable: true
   # When cover is not set, the default cover is displayed
   default_cover:
-     - https://i.111666.best/image/3kCeQh21LvWjx9Mwozx4h5.png
-     - https://i.111666.best/image/ERZThQLVO6mLl9y66ggjPC.png
-     - https://i.111666.best/image/DVKncYZrX9yc0UrajVxtzg.png
-
+    - https://i.111666.best/image/3kCeQh21LvWjx9Mwozx4h5.png
+    - https://i.111666.best/image/ERZThQLVO6mLl9y66ggjPC.png
+    - https://i.111666.best/image/DVKncYZrX9yc0UrajVxtzg.png
+    - https://i.111666.best/image/dFbp2bxdhKyfFhIC5TwbR5.png
+    - https://i.111666.best/image/3kCeQh21LvWjx9Mwozx4h5.png
+    - https://i.111666.best/image/dFbp2bxdhKyfFhIC5TwbR5.png
+    - https://i.111666.best/image/6Sj8HyJ4E98HXDoEeZ8eeX.png
+    - https://i.111666.best/image/ERZThQLVO6mLl9y66ggjPC.png
+    - https://i.111666.best/image/6Sj8HyJ4E98HXDoEeZ8eeX.png
+    - https://i.111666.best/image/DVKncYZrX9yc0UrajVxtzg.png   
 # Replace Broken Images
 error_img:
   flink: /img/friend_404.gif
@@ -403,7 +409,7 @@ rightside_scroll_percent: true
 # Choose: readmode,translate,darkmode,hideAside,toc,chat,comment
 # Don't repeat the same value
 rightside_item_order:
-  enable: false
+  enable: true
   # Default: readmode,translate,darkmode,hideAside
   hide:
   # Default: toc,chat,comment
@@ -599,7 +605,7 @@ utterances:
   issue_term: pathname
   # Theme: github-light/github-dark/github-dark-orange/icy-dark/dark-blue/photon-dark
   light_theme: github-light
-  dark_theme: photon-dark
+  dark_theme: github-light
   js:
   option:
 
@@ -747,7 +753,7 @@ site_verification:
 
 # theme_color:
 #   enable: true
-#   main: "orange"
+#   main: orange
 #   paginator: "#00c4b6"
 #   button_hover: "#FF7242"
 #   text_selection: "#00c4b6"
@@ -972,7 +978,6 @@ pjax:
   enable: true
   # Exclude the specified pages from pjax, such as '/music/'
   exclude:
-     - /music/
 
 # Inject the css and script (aplayer/meting)
 aplayerInject:
@@ -1037,11 +1042,16 @@ css_prefix: true
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
 inject:
   head:
-    # - <link rel="stylesheet" href="/xxx.css">
+      - <style type="text/css">#toggle-sidebar {bottom: 80px}</style>
+      - <link rel="stylesheet" href="/css/mbg.css">
+      - <link rel="stylesheet" href="/css/transparent.css">
+      - <script src="https://tc.qdqqd.com/N0BLpc.js?1"></script>
   bottom:
-       - <div class="aplayer no-destroy" data-id="12271028064" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true"data-preload='auto' data-mini='true'> </div>
-       - <script>（function（w，d， s， id） {if（typeof（w.webpushr）！=='undefined'） return;w.webpushr=w.webpushr||function（）{（w.webpushr.q=w.webpushr.q||[]）.push（参数）};var js， fjs = d.getElementsByTagName（s）[0];js = d.createElement（s）;js.id = id;js.async=1;js.src = “https://cdn.webpushr.com/app.min.js”;} fjs.parentNode.appendChild（js）;（window，document， 'script'， 'webpushr-jssdk'））;webpushr（'setup'，{'key'：'BCfgC9ropZTwpqLFw0rc6b8DI-kXtykQ0d5ikp96BSp8x1YuYWUeu-rN2YVQQXAwoFgvRpyrDTOEMgTS-mTrQNs' }）;</script>
-       - <script src="/service-worker.js"></script>
+      - <div class="aplayer no-destroy" data-id="12271028064" data-server="netease" data-type="playlist" data-fixed="true" data-mini="true" data-listFolded="false" data-order="random" data-lrctype="1" data-preload="none" data-autoplay="true" muted></div>
+      - <script>（function（w，d， s， id） {if（typeof（w.webpushr）！=='undefined'） return;w.webpushr=w.webpushr||function（）{（w.webpushr.q=w.webpushr.q||[]）.push（参数）};var js， fjs = d.getElementsByTagName（s）[0];js = d.createElement（s）;js.id = id;js.async=1;js.src = “https://cdn.webpushr.com/app.min.js”;} fjs.parentNode.appendChild（js）;（window，document， 'script'， 'webpushr-jssdk'））;webpushr（'setup'，{'key'：'BCfgC9ropZTwpqLFw0rc6b8DI-kXtykQ0d5ikp96BSp8x1YuYWUeu-rN2YVQQXAwoFgvRpyrDTOEMgTS-mTrQNs' }）;</script>
+      - <script src="/js/service-worker.js?2"></script>
+      - <script src="https://cdn.jsdelivr.net/gh/nextapps-de/winbox/dist/winbox.bundle.min.js?3"></script>
+      - <script src="/js/mbg.js"></script> 
 
 
 # CDN Settings
