--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -91,7 +91,7 @@ footer_img: false
 
 # Website Background
 # Can set it to color or image url
-background:
+background: rgba(114, 118, 139, .08)
 
 cover:
   # Disable the cover or not
