--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -67,36 +67,36 @@ avatar:
 disable_top_img: false
 
 # If the banner of page not setting, it will show the default_top_img
-default_top_img: https://jsd.cdn.zzko.cn/gh/XD06/picx-images-hosting@master/wopaper/4.7lk4inz7av.webp
+default_top_img: https://file.uhsea.com/2502/6a391280c2bc7d795422a7102af5e888JR.png
 # The banner image of index page
-index_img: https://i.111666.best/image/eQmNfvGCAByCl0JhqggFeL.jpeg
+index_img: https://file.uhsea.com/2502/84a22e13be313a239a869ced410e97679C.png
 
 
 # The banner image of archive page
 archive_img: https://i.111666.best/image/ahltblVZOWc1SBbBgxJYiP.png
 
 # Note: tag page, not tags page
-tag_img: https://i.111666.best/image/ahltblVZOWc1SBbBgxJYiP.png
+tag_img: https://file.uhsea.com/2502/13d9e8f8c70a9f11d838fd0cb3110d7eLP.png
 
 # The banner image of tag page, you can set the banner image for each tag
 # Format:
 #  - tag name: xxxxx
-tag_per_img: https://i.111666.best/image/ahltblVZOWc1SBbBgxJYiP.png
+tag_per_img: https://file.uhsea.com/2502/5394e74ac86eb1ca0db376d60ee5f519Z3.png
 
 # Note: category page, not categories page
-category_img: https://i.111666.best/image/ahltblVZOWc1SBbBgxJYiP.png
+category_img: https://file.uhsea.com/2502/c3d1a5b221d4c90c7f57c8bf3842c157MK.png
 
 # The banner image of category page, you can set the banner image for each category
 # Format:
 #  - category name: xxxxx
-category_per_img: https://i.111666.best/image/ahltblVZOWc1SBbBgxJYiP.png
+category_per_img: https://file.uhsea.com/2502/ba9f30274eff3e33f9ace829a2cc703dGZ.png
 
 # The background image of footer
-footer_img: "transparent"
+footer_img: transparent
 
 # Website Background
 # Can set it to color or image url
-background: "transparent"
+background: https://file.uhsea.com/2502/72351b7da738197a703d9e7caa81161c2J.png
 
 cover:
   # Disable the cover or not
@@ -105,16 +105,21 @@ cover:
   archives_enable: true
   # When cover is not set, the default cover is displayed
   default_cover:
-    - https://i.111666.best/image/3kCeQh21LvWjx9Mwozx4h5.png
-    - https://i.111666.best/image/ERZThQLVO6mLl9y66ggjPC.png
-    - https://i.111666.best/image/DVKncYZrX9yc0UrajVxtzg.png
-    - https://i.111666.best/image/dFbp2bxdhKyfFhIC5TwbR5.png
-    - https://i.111666.best/image/3kCeQh21LvWjx9Mwozx4h5.png
-    - https://i.111666.best/image/dFbp2bxdhKyfFhIC5TwbR5.png
-    - https://i.111666.best/image/6Sj8HyJ4E98HXDoEeZ8eeX.png
-    - https://i.111666.best/image/ERZThQLVO6mLl9y66ggjPC.png
-    - https://i.111666.best/image/6Sj8HyJ4E98HXDoEeZ8eeX.png
-    - https://i.111666.best/image/DVKncYZrX9yc0UrajVxtzg.png   
+    - https://dsk.dskblog.top/wopaper/2.5tr5nrfueq.webp
+    - https://file.uhsea.com/2502/3f630c2e88a94f77bc234e2dcf96b05d0Y.png
+    - https://file.uhsea.com/2502/2d030f8ef37981b78022d8321912f3e4Z0.png
+    - https://dsk.dskblog.top/wopaper/3.m7egse5x.webp
+    - https://dsk.dskblog.top/wopaper/blog0001top.67xllhvrrk.webp
+    - https://dsk.dskblog.top/wopaper/blog0002top.8oju0f2no4.webp
+    - https://dsk.dskblog.top/wopaper/blog0006top.99thmpx3zy.webp
+    - https://dsk.dskblog.top/wopaper/blog0005top.5tr5umngxn.webp
+    - https://dsk.dskblog.top/wopaper/blog0007top.4ub2hgkps0.webp
+    - https://dsk.dskblog.top/wopaper/blog0010top.2dou2jdtx4.webp
+    - https://dsk.dskblog.top/wopaper/blog0008top.5j4c1h88so.webp
+    - https://dsk.dskblog.top/wopaper/blog0016top.491ev5q9kj.webp
+    - https://dsk.dskblog.top/wopaper/【哲风壁纸】Chris插画-插画.6ikf8516oy.webp
+
+
 # Replace Broken Images
 error_img:
   flink: /img/friend_404.gif
@@ -165,7 +170,7 @@ subtitle:
   effect: true
   # Customize typed.js
   # https://github.com/mattboldt/typed.js/#customization
-  typed_option: 
+  typed_option: https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js
   # Source - Call the third-party service API (Chinese only)
   # It will show the source first, then show the content of sub
   # Choose: false/1/2/3
@@ -173,7 +178,7 @@ subtitle:
   # 1 - hitokoto.cn
   # 2 - yijuzhan.com
   # 3 - jinrishici.com
-  source: 1
+  source: false
   # If you close the typewriter effect, the subtitle will only show the first line of sub
   sub: 
     - 何去何从，还未可知
@@ -751,23 +756,23 @@ site_verification:
 # Theme color for customize
 # Notice: color value must in double quotes like "#000" or may cause error!
 
-# theme_color:
-#   enable: true
-#   main: orange
-#   paginator: "#00c4b6"
-#   button_hover: "#FF7242"
-#   text_selection: "#00c4b6"
-#   link_color: "#99a9bf"
-#   meta_color: "#858585"
-#   hr_color: "#A4D8FA"
-#   code_foreground: "#F47466"
-#   code_background: "rgba(27, 31, 35, .05)"
-#   toc_color: "#00c4b6"
-#   blockquote_padding_color: "#49b1f5"
-#   blockquote_background_color: "#49b1f5"
-#   scrollbar_color: "#49b1f5"
-#   meta_theme_color_light: "ffffff"
-#   meta_theme_color_dark: "#0d0d0d"
+theme_color:
+  enable: true
+  main: orange
+  paginator: "#00c4b6"
+  button_hover: "#FF7242"
+  text_selection: "#00c4b6"
+  link_color: "#99a9bf"
+  meta_color: "#858585"
+  hr_color: "#A4D8FA"
+  code_foreground: "#F47466"
+  code_background: "rgba(27, 31, 35, .05)"
+  toc_color: "#00c4b6"
+  blockquote_padding_color: "#49b1f5"
+  blockquote_background_color: "#49b1f5"
+  scrollbar_color: "#49b1f5"
+  meta_theme_color_light: "ffffff"
+  meta_theme_color_dark: "#0d0d0d"
 
 # The user interface setting of category and tag page
 # Choose: index - same as Homepage UI / default - same as archives UI
@@ -794,7 +799,7 @@ preloader:
   # 2. pace (progress bar)
   source: 1
   # pace theme (see https://codebyzach.github.io/pace/)
-  pace_css_url:
+  pace_css_url: https://file.uhsea.com/2502/7c438896f6de57baa69b5c0f95a1bb60RL.css
 
 # Page Transition
 enter_transitions: true
@@ -1003,7 +1008,7 @@ instantpage: true
 lazyload:
   enable: true
   # Specify the field to use lazyload (site or post)
-  field: post
+  field: site
   placeholder:
   blur: false
 
@@ -1042,16 +1047,15 @@ css_prefix: true
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
 inject:
   head:
-      - <style type="text/css">#toggle-sidebar {bottom: 80px}</style>
       - <link rel="stylesheet" href="/css/mbg.css">
       - <link rel="stylesheet" href="/css/transparent.css">
-      - <script src="https://tc.qdqqd.com/N0BLpc.js?1"></script>
   bottom:
+      - <script src="https://tc.qdqqd.com/oTEaFo.js" data-pjax="" defer=""></script>
       - <div class="aplayer no-destroy" data-id="12271028064" data-server="netease" data-type="playlist" data-fixed="true" data-mini="true" data-listFolded="false" data-order="random" data-lrctype="1" data-preload="none" data-autoplay="true" muted></div>
       - <script>（function（w，d， s， id） {if（typeof（w.webpushr）！=='undefined'） return;w.webpushr=w.webpushr||function（）{（w.webpushr.q=w.webpushr.q||[]）.push（参数）};var js， fjs = d.getElementsByTagName（s）[0];js = d.createElement（s）;js.id = id;js.async=1;js.src = “https://cdn.webpushr.com/app.min.js”;} fjs.parentNode.appendChild（js）;（window，document， 'script'， 'webpushr-jssdk'））;webpushr（'setup'，{'key'：'BCfgC9ropZTwpqLFw0rc6b8DI-kXtykQ0d5ikp96BSp8x1YuYWUeu-rN2YVQQXAwoFgvRpyrDTOEMgTS-mTrQNs' }）;</script>
       - <script src="/js/service-worker.js?2"></script>
       - <script src="https://cdn.jsdelivr.net/gh/nextapps-de/winbox/dist/winbox.bundle.min.js?3"></script>
-      - <script src="/js/mbg.js"></script> 
+      - <script src="/js/mbg.js?1"></script> 
 
 
 # CDN Settings
@@ -1072,12 +1076,14 @@ CDN:
   custom_format:
 
   option:
+    typed: https://tc.qdqqd.com/N0BLpc.js?1
+    pjax: https://cdn.jsdelivr.net/npm/pjax/pjax.js
     # abcjs_basic_js:
     # activate_power_mode:
     # algolia_js:
     # algolia_search:
-    # aplayer_css:
-    # aplayer_js:
+    # aplayer_css: 
+    # aplayer_js: 
     # artalk_css:
     # artalk_js:
     # blueimp_md5:
@@ -1115,14 +1121,14 @@ CDN:
     # prismjs_autoloader:
     # prismjs_js:
     # prismjs_lineNumber_js:
-    # pjax:
+
     # sharejs:
     # sharejs_css:
     # snackbar:
     # snackbar_css:
     # translate:
     # twikoo:
-    # typed:
+ 
     # utils:
     # valine:
     # waline_css:
