--- a/_config.yml
+++ b/_config.yml
@@ -151,3 +151,22 @@ hexo-daily-news:
   token: 'a3dksvxt73gyhpp3gjymbxxcsoqjq9'
 version: '1.0.0'
 timestamp: <%= new Date().getTime() %>
+live_reload:
+    delay: 0
+    info: true
+    retry: 3000
+# hexo-butterfly-swiper
+swiper:
+  enable: true # 开关
+  priority: 5 #过滤器优先权
+  enable_page: all # 应用页面
+  timemode: date #date/updated
+  layout: # 挂载容器类型
+    type: id
+    name: recent-posts
+    index: 0
+  default_descr: 再怎么看我也不知道怎么描述它的啦！
+  swiper_css: https://npm.elemecdn.com/hexo-butterfly-swiper/lib/swiper.min.css #swiper css依赖
+  swiper_js: https://npm.elemecdn.com/hexo-butterfly-swiper/lib/swiper.min.js #swiper js依赖
+  custom_css: https://npm.elemecdn.com/hexo-butterfly-swiper/lib/swiperstyle.css # 适配主题样式补丁
+  custom_js: https://npm.elemecdn.com/hexo-butterfly-swiper/lib/swiper_init.js # swiper初始化方法
