--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -11,7 +11,7 @@
 
 nav:
   # Navigation bar logo image
-  logo: 地方
+  logo: 
   display_title: true
   # Whether to fix navigation bar
   fixed: false
